# confinject

./: .gitignore  README.md  confinject.py  pyproject.toml
confinject/: cli.py
